# Haptic_Gestures_Library

./: CMakeLists.txt  Makefile  README.md  compile_commands.json
Haptic_Gestures/: CMakeLists.txt
Haptic_Gestures/include/: Haptic_Gestures.h  Haptic_Gestures.hpp  Haptic_Gestures_Library.hpp  click.hpp  clickv_2.hpp  clip.hpp  function_generator.hpp  inertia.hpp  reed_pressure.hpp  spin.hpp  spring.hpp
Haptic_Gestures/src/: Haptic_Gestures.cpp  Haptic_Gestures_Library.cpp  click.cpp  clickv_2.cpp  function_generator.cpp  inertia.cpp  pid.cpp  reed_pressure.cpp  spin.cpp  spring.cpp
examples/Haptic_Library_example/: CMakeLists.txt
examples/Haptic_Library_example/src/: main.cpp
examples/clickV_2_example/: CMakeLists.txt
examples/clickV_2_example/src/: main.cpp
examples/click_example/: CMakeLists.txt
examples/click_example/src/: main.cpp
examples/pid_example/: CMakeLists.txt
examples/pid_example/src/: pid_example.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp
